UI/core fixing the issue with Modal units when the dialog jumped down with wrapping

--- a/ui/core/main.sass
+++ b/ui/core/main.sass
@@ -263,9 +263,11 @@
   top:      0
   z-index:  9999999
   background: rgba(100,100,100,0.5)
+  white-space: nowrap
 
   .lui-inner
-    overflow: auto
+    overflow:    auto
+    white-space: normal
 
   &.lui-modal-nolock
     left: -999999em
